# sk-engine

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  issues.md  vcpkg.json  vcpkg.md
fixture/: CMakeLists.txt  README.md
fixture/gl-model/: 01.conversation.txt  03.conversation.txt  04.conversation.txt  05.conversation.txt  CMakeLists.txt  README.md  incorrect-texture-export.txt  main.cpp
fixture/gl-model/conversation/: 02.conversation.txt  prepare-texture.conversation.txt
fixture/test-cmake/: CMakeLists.txt  a.txt  main.cpp  shader.vert
fixture/tinygltf-model/: CMakeLists.txt  README.md  main.cpp
fixture/tinygltf-model/conversation/: 01.conversation.txt  02.conversation.txt
fixture/triangle-3d/: CMakeLists.txt  README.md  main.cpp
fixture/vulkan-triangle/: .gitignore  CMakeLists.txt  Compile.bat  Compile.ps1  Concept_Steps_To_Render_Triangle.txt  Practice_Vulkan.txt  README.md  Rendering_Pipeline_Stages.txt  explore.cpp  explore.h  main.cpp
include/GLAD/: README.md  glad.c  glad.h
include/glm/: README.md
picture/: README.md
resource/: README.md  allocator-log.txt  assimp-cmake-custom-build-flags.conversation.txt  babylonjs-impression.txt  context-before-loading-opengl.txt  day-4.txt  explore-vulkan-intricacies.txt  layer-extensions.txt  layers.txt  shader-program-uniforms.txt  vao-vbo-ebo-draw.conversation.txt  vector-rotation.txt
src/: CMakeLists.txt  glad.c  main.cpp  shader.h
